<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Leggo</string>
    <string name="action_title">Leggo</string>
    <string name="action_description">Find a path</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">상세 설정</string>
    <string name="start_service">Settings</string>

    <string name="pref_linkapp_label">Link Map Apps</string>
    <string name="pref_linkapp_label_daum">Daum Maps</string>
    <string name="pref_linkapp_label_google">Google Maps</string>
    <string name="pref_linkapp_key">linkapp</string>
    <string name="pref_linkapp_daum">daum</string>
    <string name="pref_linkapp_google">google</string>

    <string name="pref_saveponit_label">자동 경로안내</string>
    <string name="pref_savepoint_key">saveponit</string>
    <string name="pref_savetime_key">savetime</string>
    <string name="pref_savetime_label">자동 경로 검색 시간(분단위)</string>

    <string name="app_information">
        이 앱은 Fingo+를 활용하는 앱입니다.
        다음 지도 앱이 깔려있거나 구글 맵이 있어야 합니다.
        메뉴 버튼 혹은 밑의 버튼을 눌러 설정해주세요.
        자동 설정 시간 : 자동으로 검색 경로 안내 시간
    </string>
</resources>
