<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ListPreference
        android:title="@string/pref_linkapp_label"
        android:key="@string/pref_linkapp_key"
        android:defaultValue="@string/pref_linkapp_daum"
        android:entryValues="@array/pref_linkapp_values"
        android:entries="@array/pref_linkapp_options" />
    <CheckBoxPreference
        android:title="@string/pref_saveponit_label"
        android:key="@string/pref_savepoint_key"
        android:defaultValue="true" />
    <EditTextPreference
        android:defaultValue="1"
        android:summary="1"
        android:title="@string/pref_savetime_label"
        android:dialogTitle="@string/pref_savetime_label"
        android:key="@string/pref_savetime_key"
        android:inputType="number"
        android:autoText="true" />
</PreferenceScreen>